# mikebom

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.dev  EVALUATION.md  README.md  lima.yaml
.github/workflows/: ci.yml  release.yml
.specify/: init-options.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
demos/: README.md
demos/debian/: run.sh
demos/rust/: run.sh
docs/: design-notes.md  ecosystems.md  index.md
docs/architecture/: attestations.md  enrichment.md  generation.md  licenses.md  overview.md  purls-and-cpes.md  resolution.md  scanning.md  signing.md
docs/reference/: sbom-format-mapping.md
docs/research/: go-binary-scope.md
docs/user-guide/: cli-reference.md  configuration.md  installation.md  quickstart.md
mikebom-cli/: Cargo.toml  build.rs
mikebom-cli/src/: config.rs  error.rs  lib.rs  main.rs
mikebom-cli/src/attestation/: builder.rs  mod.rs  serializer.rs  signer.rs  subject.rs  verifier.rs  witness_builder.rs
mikebom-cli/src/cli/: attestation_cmd.rs  auto_dirs.rs  compare.rs  enrich.rs  generate.rs  mod.rs  parity_cmd.rs  policy.rs  run.rs  sbom_cmd.rs  scan.rs  scan_cmd.rs  trace_cmd.rs  validate.rs  verify.rs
mikebom-cli/src/enrich/: clearly_defined_client.rs  clearly_defined_coord.rs  clearly_defined_source.rs  deps_dev_client.rs  deps_dev_graph.rs  deps_dev_system.rs  depsdev_source.rs  license_resolver.rs  lockfile_source.rs  mod.rs  pipeline.rs  source.rs  supplier_resolver.rs  vex_builder.rs
mikebom-cli/src/generate/: cpe.rs  mod.rs
mikebom-cli/src/generate/cyclonedx/: builder.rs  compositions.rs  dependencies.rs  evidence.rs  metadata.rs  mod.rs  serializer.rs  vex.rs
mikebom-cli/src/generate/openvex/: mod.rs  statements.rs
mikebom-cli/src/generate/spdx/: annotations.rs  builder.rs  document.rs  ids.rs  mod.rs  packages.rs  relationships.rs  serializer.rs  v3_agents.rs  v3_annotations.rs  v3_document.rs  v3_external_ids.rs  v3_licenses.rs  v3_packages.rs  v3_relationships.rs  v3_stub.rs
mikebom-cli/src/parity/: catalog.rs  extractors.rs  mod.rs
mikebom-cli/src/parity/extractors/: cdx.rs  common.rs  mod.rs  spdx2.rs  spdx3.rs
mikebom-cli/src/policy/: apply.rs  layout.rs  mod.rs
mikebom-cli/src/resolve/: deduplicator.rs  hash_resolver.rs  hostname_resolver.rs  mod.rs  path_resolver.rs  pipeline.rs  purl_validator.rs  url_resolver.rs
mikebom-cli/src/sbom/: mod.rs  mutator.rs
mikebom-cli/src/scan_fs/: docker_image.rs  mod.rs  os_release.rs  walker.rs
mikebom-cli/src/scan_fs/binary/: discover.rs  elf.rs  entry.rs  jdk_collapse.rs  linkage.rs  macho.rs  mod.rs  packer.rs  pe.rs  predicates.rs  python_collapse.rs  scan.rs  version_strings.rs
mikebom-cli/src/scan_fs/package_db/: apk.rs  cargo.rs  copyright.rs  dpkg.rs  file_hashes.rs  gem.rs  go_binary.rs  golang.rs  maven.rs  maven_sidecar.rs  mod.rs  npm.rs  pip.rs  project_roots.rs  rpm.rs  rpm_file.rs  rpmdb_bdb.rs
mikebom-cli/src/scan_fs/package_db/npm/: enrich.rs  mod.rs  package_lock.rs  pnpm_lock.rs  walk.rs
mikebom-cli/src/scan_fs/package_db/pip/: dist_info.rs  mod.rs  pipfile.rs  poetry.rs  requirements_txt.rs
mikebom-cli/src/scan_fs/package_db/rpmdb_sqlite/: mod.rs  page.rs  record.rs  rpm_header.rs  schema.rs
mikebom-cli/src/trace/: aggregator.rs  hasher.rs  http_parser.rs  loader.rs  mod.rs  pid_tracker.rs  processor.rs  sni_extractor.rs
mikebom-cli/tests/: cdx_regression.rs  component_count_parity.rs  cpe_v3_acceptance.rs  dual_format_perf.rs  feature_gate.rs  format_dispatch.rs  holistic_parity.rs  mapping_doc_bidirectional.rs  no_c_dependencies.rs  openvex_sidecar.rs  parity_cmd.rs  policy_layout.rs  sbom_enrich.rs  sbom_format_mapping_coverage.rs  sbomqs_parity.rs  scan_binary.rs  scan_cargo.rs  scan_gem.rs  scan_go.rs  scan_image.rs  scan_maven.rs  scan_maven_executable_jar.rs  scan_maven_shade_deps.rs  scan_maven_sidecar.rs  scan_npm.rs  scan_polyglot_monorepo.rs  scan_python.rs  scan_rpm.rs  scan_rpm_file.rs  spdx3_annotation_fidelity.rs  spdx3_cdx_parity.rs  spdx3_cli_labeling.rs  spdx3_determinism.rs  spdx3_regression.rs  spdx3_schema_validation.rs  spdx3_stub.rs  spdx3_us3_acceptance.rs  spdx_annotation_fidelity.rs  spdx_cdx_parity.rs  spdx_determinism.rs  (+7 more)
mikebom-cli/tests/common/: mod.rs  normalize.rs
mikebom-cli/tests/fixtures/golden/cyclonedx/: apk.cdx.json  cargo.cdx.json  deb.cdx.json  gem.cdx.json  golang.cdx.json  maven.cdx.json  npm.cdx.json  pip.cdx.json  rpm.cdx.json
mikebom-cli/tests/fixtures/golden/spdx-2.3/: apk.spdx.json  cargo.spdx.json  deb.spdx.json  gem.spdx.json  golang.spdx.json  maven.spdx.json  npm.spdx.json  pip.spdx.json  rpm.spdx.json
mikebom-cli/tests/fixtures/golden/spdx-3/: apk.spdx3.json  cargo.spdx3.json  deb.spdx3.json  gem.spdx3.json  golang.spdx3.json  maven.spdx3.json  npm.spdx3.json  pip.spdx3.json  rpm.spdx3.json
mikebom-common/: Cargo.toml
mikebom-common/src/: events.rs  ip.rs  lib.rs  maps.rs  resolution.rs
mikebom-common/src/attestation/: envelope.rs  file.rs  integrity.rs  metadata.rs  mod.rs  network.rs  statement.rs  witness.rs
mikebom-common/src/types/: bomref.rs  hash.rs  license.rs  mod.rs  purl.rs  timestamp.rs
mikebom-ebpf/: Cargo.toml
mikebom-ebpf/src/: helpers.rs  main.rs  maps.rs
mikebom-ebpf/src/programs/: file_ops.rs  mod.rs  tcp_connect.rs  tls_openssl.rs
scripts/: pre-pr.sh
specs/001-build-trace-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-python-npm-ecosystem/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-multi-ecosystem-expansion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rpm-binary-sboms/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-purl-and-scope-alignment/: data-model.md  plan.md  quickstart.md  release-notes.md  research.md  spec.md  tasks.md
specs/006-sbomit-suite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-polyglot-fp-cleanup/: data-model.md  plan.md  spec.md  (+3 more)
(+202 files in other folders)
