[package]
name = "mikebom"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mikebom"
path = "src/main.rs"

[dependencies]
mikebom-common = { path = "../mikebom-common", features = ["std", "aya-user"] }

flate2 = "1"
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

base64 = "0.22"

# Milestone 003 — pure-Rust-only deps. See specs/003-multi-ecosystem-expansion/
# tasks.md T001 for the feature-pinning rationale (Principle I: zero C).
# Any feature change here must be cross-checked with
# `cargo tree -p mikebom -e normal | rg -i 'libz|zlib|c-bindings|libsqlite3'`
# and the `no_c_dependencies_in_tree` regression test.
object = { version = "0.36", default-features = false, features = ["read", "std", "elf", "macho", "pe", "coff"] }
quick-xml = { version = "0.31", default-features = false }
zip = { version = "0.6", default-features = false, features = ["deflate-miniz"] }
# Milestone 004 US1 — pure-Rust .rpm v3/v4 header parser. Dependency
# audit (T002 per research.md R1): transitive tree must be C-clean.
# Verified with `cargo tree -p rpm` — no libz-sys / bzip2-sys / etc.
rpm = { version = "0.22", default-features = false, features = [] }

# Feature 006 — SBOMit compliance: DSSE envelope signing + Fulcio keyless +
# Rekor transparency log. Pin to 0.10.x because 0.13+ forces aws-lc-rs via
# the `cert` feature, violating Constitution Principle I (pure Rust, zero C).
# rustls-tls variants chosen to match existing reqwest rustls posture. See
# specs/006-sbomit-suite/research.md R1 for the audit.
sigstore = { version = "0.10", default-features = false, features = ["sigstore-trust-root-rustls-tls", "cosign-rustls-tls", "fulcio-rustls-tls", "rekor-rustls-tls", "bundle"] }
# Feature 006 — PEM + X.509 parsing for cert SAN + SPKI extraction in
# `mikebom sbom verify`. Transitive deps of sigstore, promoted to direct
# for re-use.
pem = "3"
x509-parser = "0.16"

# Feature 006 US5 — RFC 6902 JSON Patch for SBOM enrichment.
json-patch = "3"

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
# Milestone 010 — pure-Rust JSON Schema validator used in tests to check
# produced SPDX 2.3 / SPDX 3.0.1 / OpenVEX output against the vendored
# upstream schemas under `tests/fixtures/schemas/`. Supports both Draft 7
# (SPDX 2.3) and Draft 2020-12 (SPDX 3.0.1, OpenVEX). See
# specs/010-spdx-output-support/research.md R5. Pure Rust — no C deps;
# verified to not break the no_c_dependencies regression test.
jsonschema = { version = "0.46", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13"
aya-log = "0.2"
libc = "0.2"
