[package]
name = "mikebom"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mikebom"
path = "src/main.rs"

# Milestone 013 — minimal library crate exposing the cross-format
# parity catalog parser + extractor table at `mikebom::parity::*`.
# The library is consumed by the binary's `cli/parity_cmd.rs` AND
# by integration tests under `tests/`. Only `pub mod parity;` is
# exported today; nothing else from `src/` is intentionally
# library-public — the binary remains the canonical surface for
# every other module (cli, generate, resolve, etc.) per the
# three-crate architecture (Constitution Principle VI).
[lib]
name = "mikebom"
path = "src/lib.rs"

[features]
default = []

# Enable user-space eBPF tracing for the `mikebom trace` subcommand.
# Activates aya/aya-log/libc + the `aya-user` feature on mikebom-common,
# all of which are otherwise dropped from the dependency graph.
#
# Requirements when active:
#   - Linux host (the optional deps are also `target_os = "linux"`-gated).
#   - Nightly Rust + bpf-linker for the kernel-side artifact built by
#     `cargo run -p xtask -- ebpf` (separate target triple, separate crate).
#
# See specs/020-ebpf-feature-gate/contracts/feature-flag.md for the
# formal contract. Default builds (Linux + macOS + CI default lane)
# stay stable-only and do not pay the nightly + bpf-linker tax.
ebpf-tracing = [
    "dep:aya",
    "dep:aya-log",
    "dep:libc",
    "mikebom-common/aya-user",
]

[dependencies]
mikebom-common = { path = "../mikebom-common", features = ["std"] }

flate2 = "1"
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

base64 = "0.22"
# Milestone 010 — RFC 4648 base32 encoding for deterministic SPDX IDs
# (SPDXRef-Package-<base32(SHA-256(purl))[..16]>) and document
# namespaces. Already present as a transitive dep via
# `jsonschema` and `asn1-rs`; promoted here to a direct dep per
# Constitution Principle VI "no new runtime crates" (not new —
# already in the lockfile).
data-encoding = "2"

# Milestone 013 — regex parser for the canonical SBOM-format-mapping
# datum catalog (`docs/reference/sbom-format-mapping.md`).
# `parity::catalog::parse_mapping_doc` uses three small patterns to
# extract row IDs, property names, and path segments. Already
# present as a transitive dep via `jsonschema`; promoted here per
# Constitution Principle VI "no new runtime crates" (not new —
# already in the lockfile). Plan.md / spec Primary Dependencies
# explicitly names regex.
regex = "1"

# Milestone 003 — pure-Rust-only deps. See specs/003-multi-ecosystem-expansion/
# tasks.md T001 for the feature-pinning rationale (Principle I: zero C).
# Any feature change here must be cross-checked with
# `cargo tree -p mikebom -e normal | rg -i 'libz|zlib|c-bindings|libsqlite3'`
# and the `no_c_dependencies_in_tree` regression test.
object = { version = "0.36", default-features = false, features = ["read", "std", "elf", "macho", "pe", "coff"] }
quick-xml = { version = "0.31", default-features = false }
zip = { version = "0.6", default-features = false, features = ["deflate-miniz"] }
# Milestone 004 US1 — pure-Rust .rpm v3/v4 header parser. Dependency
# audit (T002 per research.md R1): transitive tree must be C-clean.
# Verified with `cargo tree -p rpm` — no libz-sys / bzip2-sys / etc.
rpm = { version = "0.22", default-features = false, features = [] }

# Feature 006 — SBOMit compliance: DSSE envelope signing + Fulcio keyless +
# Rekor transparency log. Pin to 0.10.x because 0.13+ forces aws-lc-rs via
# the `cert` feature, violating Constitution Principle I (pure Rust, zero C).
# rustls-tls variants chosen to match existing reqwest rustls posture. See
# specs/006-sbomit-suite/research.md R1 for the audit.
sigstore = { version = "0.10", default-features = false, features = ["sigstore-trust-root-rustls-tls", "cosign-rustls-tls", "fulcio-rustls-tls", "rekor-rustls-tls", "bundle"] }
# Feature 006 — PEM + X.509 parsing for cert SAN + SPKI extraction in
# `mikebom sbom verify`. Transitive deps of sigstore, promoted to direct
# for re-use.
pem = "3"
x509-parser = "0.16"

# Feature 006 US5 — RFC 6902 JSON Patch for SBOM enrichment.
json-patch = "3"

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
# Milestone 010 — pure-Rust JSON Schema validator used in tests to check
# produced SPDX 2.3 / SPDX 3.0.1 / OpenVEX output against the vendored
# upstream schemas under `tests/fixtures/schemas/`. Supports both Draft 7
# (SPDX 2.3) and Draft 2020-12 (SPDX 3.0.1, OpenVEX). See
# specs/010-spdx-output-support/research.md R5. Pure Rust — no C deps;
# verified to not break the no_c_dependencies regression test.
jsonschema = { version = "0.46", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
# Activated by the `ebpf-tracing` feature. Combined with the target
# predicate, these are pulled in only when the host is Linux AND the
# feature is enabled. Dropped from default builds per milestone 020.
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }
